changed markdown parsing dependency and link callback signature

--- a/examples/editor/Cargo.toml
+++ b/examples/editor/Cargo.toml
@@ -14,3 +14,4 @@ web-sys = {version="0.3.61", features=["HtmlTextAreaElement"]}
 
 wasm-logger = "0.2.0"
 log= "0.4.17"
+console_error_panic_hook = "0.1.7"
