--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leptos-markdown"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 leptos = {version="0.4.6", features=["csr", "nightly"]}
 
-markdown = "1.0.0-alpha.8"
+pulldown-cmark = { git = "https://github.com/rhysd/pulldown-cmark.git", branch="math"}
 syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
 katex = {version="0.4", default-features=false, features=["wasm-js"]}
 
