--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 leptos = {version="0.4.6", features=["csr", "nightly"]}
 
-pulldown-cmark-wikilink = {git="https://github.com/rambip/pulldown-cmark-wikilink"}
+pulldown-cmark-wikilink = { version="0.1.1", git="https://github.com/rambip/pulldown-cmark-wikilink" }
 syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
 katex = {version="0.4", default-features=false, features=["wasm-js"]}
 
