--- a/examples/showcase/Cargo.toml
+++ b/examples/showcase/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 leptos = {version="0.4.6", features=["nightly", "csr"]}
 
 leptos-markdown = {path= "../.."}
-wasm-bindgen = "=0.2.87"
+wasm-bindgen = "0.2.84"
 web-sys = {version="0.3.61", features=["HtmlTextAreaElement"]}
 
 wasm-logger = "0.2.0"
