updated github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,12 @@ jobs:
 
     - run: nix build
 
-    - run: tar czfh site.tar.gz --directory=result .
+    # - run: tar czfh site.tar.gz --directory=result .
+
+    - uses: actions/upload-pages-artifact@v2
+      with:
+        path: "result/"
+
 
   deploy:
     needs: build-pages
@@ -35,6 +40,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
-        with:
-          artifact_name: site.tar.gz
-
