--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leptos-markdown"
-version = "0.4.3"
+version = "0.4.4"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,6 +16,10 @@ wasm-logger = "0.2.0"
 log= "0.4.17"
 wasm-bindgen="=0.2.84"
 web-sys = {version="0.3.61", features=["MouseEvent"]}
+
+[features]
+default = []
+debug = []
 
 
 [dev-dependencies]
