--- a/examples/editor/Cargo.toml
+++ b/examples/editor/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 leptos = {version="0.4.6", features=["nightly", "csr"]}
 
-leptos-markdown = {path= "../.."}
+leptos-markdown = {path= "../..", features=["debug"]}
 wasm-bindgen = "0.2.84"
 web-sys = {version="0.3.61", features=["HtmlTextAreaElement"]}
 
