leptos v5 and support for custom components

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,11 @@
+registries.crates-io.protocol="sparse"
+
+[check]
+target = "wasm32-unknown-unknown"
+
 [build]
 target = "wasm32-unknown-unknown"
 
 [target.wasm32-unknown-unknown]
 runner = "wasm-test-runner"
+
