switched to stable rust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-leptos = {version="0.5", features=["csr", "nightly"]}
+leptos = {version="0.5", features=["csr"]}
 
 pulldown-cmark-wikilink = { version="0.1.1", git="https://github.com/rambip/pulldown-cmark-wikilink" }
 syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
