--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leptos-markdown"
-version = "0.5.2"
+version = "0.5.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,22 +8,14 @@ edition = "2021"
 [dependencies]
 leptos = {version="0.5", features=["csr"]}
 
-pulldown-cmark-wikilink = { version="0.1.1", git="https://github.com/rambip/pulldown-cmark-wikilink" }
-syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
-katex = {version="0.4", default-features=false, features=["wasm-js"]}
+rust-web-markdown = { git = "https://github.com/rambip/rust-web-markdown/" }
 
-wasm-logger = "0.2.0"
-log= "0.4.17"
 wasm-bindgen="=0.2.87"
-web-sys = {version="0.3.61", features=["MouseEvent"]}
 
 [features]
 default = []
 debug = []
 
-
-[dev-dependencies]
-wasm-test = {git="https://github.com/rambip/wasm-test"}
 
 [workspace]
 members = [
